--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
          <table>
             <tr >
-                <td><button onclick="copyToClipBoard('Caso')" class="botton1">Caso</button></td><td><input type="text" id="Caso"  onkeyup="mayus(this);"></td><td><button onclick="deliteTextbox('Caso')" class="botton1 delite"></button></td>
+                <td><button onclick="copyToClipBoard('Caso')" class="botton1">Caso</button></td><td><input type="text" id="Caso"  onkeyup="mayus(this);" placeholder="Numero de caso"></td><td><button onclick="deliteTextbox('Caso')" class="botton1 delite"></button></td>
             </tr>
             <tr>
                 <td><button onclick="copyToClipBoard('IdLlamada')" class="botton1">ID llamada </button></td><td><input type="text" id="IdLlamada" ></td><td><button onclick="deliteTextbox('IdLlamada')" class="botton1 delite"></button></td>
