--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
    
     <table>
         <tr>
-            <td><button onclick="redPass();" class="botton1" value="RED" >RED</button></td>
-            <td><button onclick="m6Pass();"  value="M6" class="botton1">M6</button></td>
-            <td><button onclick="wtsPass();"  value="WTS" class="botton1">WTS</button></td>
+            <td><button onclick="redPass("localred");" class="botton1" >RED</button></td>
+            <td><button onclick="m6Pass("localwts");"  value="M6" class="botton1">M6</button></td>
+            <td><button onclick="wtsPass("localm6");"  value="WTS" class="botton1">WTS</button></td>
             <td><button onclick="captura('consulta_equipo');"  value="SN/MAC" class="botton1">SN/MAC</button></td> 
         </tr>
         <tr>
