--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <input id="retequipo" type="hidden" value="RETIRO-EQUIPO">
     <input id="une" type="hidden" value="UNE">
     <input id="000" type="hidden" value="000000000000000\0000">
-    <input id="consulta_equipo" type="hidden" value="http://10.100.66.199:8082/RepEquiposDireccion.aspx">
+    <input id="consulta_equipo" type="hidden" value="">
     <input id="ubi" type="hidden" value="UBICGENCPE">
 
     <div id="popup" style="display: none;">
